add documentation and examples(work in progress...)

--- a/examples/basic.html
+++ b/examples/basic.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" type="text/css" media="all" href="../dist/css/otogi.css" />
+    <title>otogi.css: examples/basic</title>
   </head>
   <body>
-    <div class="otogiroot is-unselectable">
+    <div class="otogiroot">
       <div class="layer-folder">
         <div class="layer-1">
           <div class="backgroudlayer">
@@ -35,7 +38,10 @@
                     </div>
                     <div class="column-10">
                       <div class="messagewindow-message">
-                          The Matrix is everywhere. It is all around us. Even now, in this very room. You can see it when you look out your window or when you turn on your television. You can feel it when you go to work... when you go to church... when you pay your taxes. It is the world that has been pulled over your eyes to blind you from the truth.
+                          The Matrix is everywhere. It is all around us.
+                          Even now, in this very room. You can see it when you look out your window or when you turn on your television.
+                          You can feel it when you go to work... when you go to church... when you pay your taxes.
+                          It is the world that has been pulled over your eyes to blind you from the truth.
                       </div>
                     </div>
                   </div>
