--- a/examples/index.html
+++ b/examples/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" type="text/css" media="all" href="../dist/css/otogi.css" />
+    <title>otogi.css: examples/index</title>
   </head>
   <body>
     <div class="otogiroot is-unselectable">
       <div class="layer-folder">
         <div class="layer-1">
           <div class="backgroudlayer">
-            <div class="background animation chiaroscuro-6-cresc infinity alternate fast">
+            <div class="background animation chiaroscuro-6-cresc infinite alternate slow ease-in">
               <img class="background-image" src="images/byodoin.jpg" alt="byodoin" />
             </div>
           </div>
@@ -25,6 +28,11 @@
             <div class="messagewindow is-fullheight-with-margin">
               <div class="messagewindow-body">
                 <div class="choices margin-1">
+                  <div class="choice">
+                    <a href="basic.html">
+                      Basic
+                    </a>
+                  </div>
                   <div class="choice">
                     <a href="basic.html">
                       Basic
