--- a/examples/basic.html
+++ b/examples/basic.html
@@ -25,26 +25,28 @@
           <div class="messagewindowlayer">
             <div class="messagewindow">
               <div class="messagewindow-header">
-                <div class="x-20">
+                <div class="padding-left-2">
                   <label class="label forecolor-success">Morpheus</label>
                 </div>
               </div>
               <div class="messagewindow-body">
-                  <div class="row">
-                    <div class="column-2">
-                      <div class="messagewindow-character width-110">
-                        <img class="messagewindow-character-image" src="images/kurofuku_black_man.png" alt="character-image" />
-                      </div>
-                    </div>
-                    <div class="column-10">
-                      <div class="messagewindow-message">
-                          The Matrix is everywhere. It is all around us.
-                          Even now, in this very room. You can see it when you look out your window or when you turn on your television.
-                          You can feel it when you go to work... when you go to church... when you pay your taxes.
-                          It is the world that has been pulled over your eyes to blind you from the truth.
-                      </div>
+                <div class="row">
+                  <div class="column-2">
+                    <div class="messagewindow-character width-110">
+                      <img class="messagewindow-character-image" src="images/kurofuku_black_man.png" alt="character-image" />
                     </div>
                   </div>
+                  <div class="column-10">
+                    <div class="messagewindow-message">
+                        The Matrix is everywhere. It is all around us.
+                        Even now, in this very room. You can see it when you look out your window or when you turn on your television.
+                        You can feel it when you go to work... when you go to church... when you pay your taxes.
+                        It is the world that has been pulled over your eyes to blind you from the truth.
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="messagewindow-footer">
               </div>
             </div>
           </div>
